crates/wac-parser/tests/resolution/fail/duplicate-interface-export.wac
package test:comp;

interface x {
    x: func();
    x: func();
}